# NHT_Planning

./: README.md
NHT_Planner/: Backup.cpp  CMakeLists.txt  Lin_search_1.csv  Lin_search_3.csv  Lin_search_4.csv  Vertice.h  dynamics  dynamics.cpp  dynamics.h  dynamics_wEigen.h  helper_func.h  main  main.cpp  map3.txt  node.h  planner.cpp  planner.out  results.csv  sim_dyn_wEigen.cpp  sim_dynamics  sim_dynamics.cpp  sim_dynamics.h  state_template.h
NHT_Planner/KDtree/: CMakeLists.txt  KDtree.cpp  KDtree.h  KDtreePoint.h
NHT_Planner/KRRT/: CMakeLists.txt  KRRT.cpp  KRRT.h
NHT_Planner/Matlab/: Husky_dynamics.m
NHT_Planner/Xstate/: CMakeLists.txt  Xstate.cpp  Xstate.h  state_template.h
NHT_Planner/map/: CMakeLists.txt  map.cpp  map.h
NHT_Planner/node/: CMakeLists.txt  dynamics.h  node.cpp  node.h
NHT_Planner/object/: CMakeLists.txt  object.cpp  object.h
NHT_Planner/planner/: CMakeLists.txt  planner.cpp
